Controlador e Repositório de Livros no padrão correto

--- a/BiblioLinda/pom.xml
+++ b/BiblioLinda/pom.xml
@@ -76,7 +76,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>br.ufrpe.bibliolinda/br.ufrpe.bibliolinda.HelloApplication</mainClass>
+              <mainClass>br.ufrpe.bibliolinda/br.ufrpe.bibliolinda.gui.HelloApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
